styles/form.css
* {
    font-family: "IBM Plex Sans JP";
    margin: 0;
    padding: 0;
}

header {
    padding: 1rem;
    background-color: rgb(141, 203, 255);
    text-align: center;
    margin-bottom: 1.5rem;
}

.f1 {
    background-color: rgb(240, 240, 240);
    padding: 2rem;
}

.f1 input[type="text"],
.f1 input[type="date"],
.f1 select,
.f1 textarea {
    display: block;
    max-width: 400px;
    width: 270px;
    padding: .60rem;
    margin-bottom: 1rem;
}

.f1 input[type="radio"] {
    display: block;
    width: 16px;
    height: 16px;
    margin: auto;
}

.f1 input[type="checkbox"] {
    width: 16px;
    height: 16px;
    margin-bottom: 12px;
    margin-right: 12px;
}

.oRating {
    display: flex;
    flex-direction: row;
    gap: 12px;
    margin-bottom: 1rem;
}

.chckBox {
    display: flex;
    flex-direction: row;
}
.uFeatures {
    margin-bottom: 1rem;
}

p, label {
    font-size: 15px;
}

.italic {
    font-style: italic;
    margin-bottom: 5px;
}

.colorC {
    color: rgb(18, 121, 224);
    font-size: 14px;
}

input[type="submit"] {
    width: 96%;
    height: 2.5rem;
    border-radius: 5px;
    background-image: linear-gradient(rgb(251, 170, 94), rgb(254, 97, 45));
}

.uName {
    margin-bottom: 3rem;
}

footer {
    padding: 1rem;
    background-color: rgb(141, 203, 255);
    text-align: center;
    margin-top: 1.5rem;
}

.card {
    background-color: rgb(240, 240, 240);
    padding: 2rem;
    text-align: center;
}

@media (min-width: 740px) {
    main {
        max-width: 800px;
        margin: auto;
    }
}

